@@ -29,7 +29,6 @@
 --                                                                          --
 ------------------------------------------------------------------------------
 
-with Namet;  use Namet;
 with Snames; use Snames;
 with Types;  use Types;
 with Uintp;  use Uintp;
@@ -7354,11 +7353,6 @@ package Einfo is
    --  expression is deferred to the freeze point. For further details see
    --  Sem_Ch13.Analyze_Aspect_Specifications.
 
-   function Find_Pragma (Id : Entity_Id; Name : Name_Id) return Node_Id;
-   --  Given entity Id and pragma name Name, attempt to find the corresponding
-   --  pragma in Id's chain of representation items. The function returns Empty
-   --  if no such pragma has been found.
-
    function Get_Attribute_Definition_Clause
      (E  : Entity_Id;
       Id : Attribute_Id) return Node_Id;
@@ -7366,6 +7360,11 @@ package Einfo is
    --  attribute definition clause with the given attribute Id. If found, the
    --  value returned is the N_Attribute_Definition_Clause node, otherwise
    --  Empty is returned.
+
+   function Get_Pragma (E : Entity_Id; Id : Pragma_Id) return Node_Id;
+   --  Searches the Rep_Item chain for a given entity E, for an instance of
+   --  a pragma with the given pragma Id. If found, the value returned is the
+   --  N_Pragma node, otherwise Empty is returned.
 
    function Get_Record_Representation_Clause (E : Entity_Id) return Node_Id;
    --  Searches the Rep_Item chain for a given entity E, for a record
